Fixed issues with overlapping cookies notification

--- a/components/HomeCommon/IntroText/styles.module.scss
+++ b/components/HomeCommon/IntroText/styles.module.scss
@@ -13,7 +13,6 @@
   width: max-content;
   top: calc(100vh - 60px);
   transform: translateX(-50%);
-  z-index: 100000;
 
   @include macbook-twelve {
     @include fontSize(16px);
